implementando mappers e simplificando codigo